# loop-engineering

./: .gitignore  README.md  pyproject.toml
.githooks/: post-commit  pre-commit
loop/: README.md  config.json  portfolio.json
loop/products/: clearday.json  localread.json
loop/templates/: product.json
loop/tracker/: clearday.jsonl  localread.jsonl
loop_engineering/: __init__.py  builder.py  checker.py  claims.py  cli.py  gitops.py  model.py  tracker.py
scripts/: create-checkpoint.sh  install-hooks.sh  loopctl.py  restore-checkpoint.sh
tests/: test_loop_engineering.py
