[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-engineering"
version = "0.1.0"
description = "Evidence-driven product portfolio tracker, builder, verifier, and Git checkpoint toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Loop Engineering contributors"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9"
]

[project.scripts]
loopctl = "loop_engineering.cli:main"

[tool.setuptools]
packages = ["loop_engineering"]
